hdparm-8.0
	- added --make-bad-sector to deliberately create a media error
	- added --write-sector (aka. --repair-sector) to repair a media error
	- added --read-sector to test for a media error
	- Makefile dependency tweaks
	- added -N (get/set max address/HPA) flag, courtesy of Jakub Bogusz
	- fixed LBAsects output from -i to use LBA48 values when available
	- fixed alternate opcode for SLEEPNOW
	- lots of changes/fixes to sgio.c to support more commands
	- add detection of buggy Sandisk 16MB CF card
	- fixed tf_to_lba() bug, courtesy of Jakub Bogusz
hdparm-7.7
	- fixed bug whereby old data was shown after settings changed (eg. with -W0)
	- removed old notes about a "correction factor" from man page -tT descriptions
	- retry open with O_RDONLY if O_RDWR fails with errno==EROFS
hdparm-7.6
	- added -F flag to flush on-drive write cache buffer
	- replaced use of shm* functions with of mmap()/mlock()
	- removed gcc -Wextra flag --> unsupported on Debian Sarge
	- re-allow use of --security-freeze in combination with other flags
hdparm-7.5
	- beef up warnings for -s1 flag, as people seem to be ignoring them
hdparm-7.4
	- ignore ENOTTY response from DRIVE_CMD(NULL)
	- decode CFA advanced timing information
hdparm-7.3
	- fixed spelling of --drq-hsm-error in -h output
	- fixed SG_IO CDB[2] bits for better SAT compliance
	- fixed version number (v7.2 has "7.1" as version, doh!)
	- added #ifdef around use of BLKGETSIZE64
	- manpage updated
	- flush_cache before/after -W0 action
	- use O_RDWR instead of O_RDONLY for better SG_IO compatibility
hdparm-7.2
	- tweak -C
	- added more debug info from --verbose
	- added --drq-hsm-error to test libata EH (VERY DANGEROUS, do not use)
	- fixed breakage when used with old IDE driver
hdparm-7.1
	- big-endian fixes for -I, --Istdin, --Istdout
	- cody tidying in sgio.c
	- updated help/manpage for -v
	- marked -s1 as (DANGEROUS)
hdparm-7.0
	- new command-line parser
	- allow any chars (except 0x00) in security passwords