@@ -1,4 +1,4 @@
-.TH HDPARM 8 "February 2008" "Version 8.0"
+.TH HDPARM 8 "February 2008" "Version 8.1"
 
 .SH NAME
 hdparm \- get/set hard disk parameters
