@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	8.0
+Version:	8.1
 Entered-date:	2008-02-16
 Description:	hdparm - get/set hard disk parameters for Linux IDE drives.
+		v8.1 fixed -U, updated -I info
 		v8.0 some fixes, lots of new features (eg. --make-bad-sector and friends)
 		v7.7 fixed bug with incorrect settings shown after -W0 (and others)
 		v7.6 new -F flag; re-allow use of --security-freeze with other flags
@@ -64,7 +65,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		68K hdparm-8.0.tar.gz
+		69K hdparm-8.1.tar.gz
 		1K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
